# fast_dicom_reader

./: Cargo.toml  README.md  dicom_utils.rs  explanation.txt  main.rs  performance_comparison.md
data/: dicom_example.dcm
python_dicom_reader/: pyproject.toml
python_dicom_reader/python_dicom_reader/: main.py
src/: consts.rs  dicom_utils.rs  main.rs  os_utils.rs
