[tool.poetry]
name = "python-dicom-reader"
version = "0.1.0"
description = ""
authors = ["Igor Mintz <igor@viz.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.3.2"
pydicom = "^3.0.1"
tqdm = "^4.66.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
