[tool.poetry]
name = "python-dicom-reader"
version = "0.1.0"
description = ""
authors = ["Igor Mintz <igor@viz.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydicom = "^3.0.1"
numpy = "^2.3.2"
tqdm = "^4.67.1"

# Optional dependencies for better pixel data decoding performance
pylibjpeg = { version = "^2.0.0", optional = true }
pylibjpeg-libjpeg = { version = "^2.0.0", optional = true }
pylibjpeg-openjpeg = { version = "^2.0.0", optional = true }

[tool.poetry.extras]
decoders = ["pylibjpeg", "pylibjpeg-libjpeg", "pylibjpeg-openjpeg"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
